# stm32

./: .gitignore  README.md  openocd.cfg
stm32f103/: Cargo.toml  README.md  memory.x
stm32f103-DFU/: README.md
stm32f103-DFU/bootloader/: Cargo.toml  README.md
stm32f103-DFU/bootloader/src/: dfu.rs  main.rs
stm32f103-DFU/bootloader/src/drivers/: cdc_acm.rs  mod.rs
stm32f103-DFU/bootloader/src/protocols/: mod.rs  octet.rs  usb_device.rs  usb_inbound.rs  usb_outbound.rs
stm32f103-DFU/bootloader/src/tasks/: mod.rs  usb_rx.rs
stm32f103-DFU/firmware/: README.md
stm32f103-DFU/firmware/src/: device_id.rs  main.rs
stm32f103-DFU/firmware/src/protocols/: mod.rs  usb_device.rs  usb_inbound.rs  usb_outbound.rs
stm32f103-DFU/firmware/src/tasks/: usb_rx.rs  usb_tx.rs
stm32f103-DFU/uploader/: Cargo.toml
stm32f103-DFU/uploader/src/: main.rs
stm32f103-DFU/uploader/src/commands/: command_device_id.rs  command_device_mode.rs  command_executor.rs  command_firmware_version.rs  command_flags.rs  command_fv.rs  command_list.rs  command_read_flags.rs  command_upload.rs  command_version.rs  config.rs  helper.rs  mod.rs
stm32f103-DFU/uploader/src/driver/: device.rs  device_detector.rs  device_helper.rs  driver.rs  endpoint.rs  endpoint_helper.rs  mod.rs  prelude.rs  writer.rs
stm32f103-USB-CDC-ACM/: Cargo.toml
stm32f103-USB-CDC-ACM/.cargo/: config
stm32f103-USB-CDC-ACM/src/: main.rs
stm32f103-USB-CDC-ACM/src/protocols/: mod.rs  usb_device.rs
stm32f103-USB-CDC-ACM/src/tasks/: mod.rs  usb_inbound.rs  usb_outbound.rs  usb_rx.rs
stm32f103/src/: blink.rs  main.rs
(+19 files in other folders)
